feat: added student related api's
